# pangu

./: .gitignore  README.md  README_EN.md  SKILL.md  skill.json  test-prompts.json
.claude-plugin/: marketplace.json
.github/: dependabot.yml  package-lock.json  package.json  requirements-ci.txt  yamllint-ci.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
hooks/: pre-push
references/: build-optimization.md  coverage-standards.md  hooks-compare.md  languages.md  multi-language.md  registry-secrets.md  skill-release.md
scripts/: _common.sh  align-skill.sh  bump-skill-version.sh  init-cpp.sh  init-dotnet.sh  init-go.sh  init-java.sh  init-multi.sh  init-node.sh  init-php.sh  init-python.sh  init-ruby.sh  init-rust-napi.sh  init-rust-pyo3.sh  init-rust.sh  init-skill.sh  install-hooks.sh  selfcheck.sh  test-multi.sh
templates/common/: .pre-commit-config.yaml  Dockerfile
templates/cpp/: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  ci.yml  lefthook.yml  release.yml
templates/dotnet/: .gitignore  .pre-commit-config.yaml  Directory.Build.props  ci.yml  lefthook.yml  release.yml
templates/go/: .gitignore  .golangci.yaml  .pre-commit-config.yaml  Makefile  ci.yml  lefthook.yml  release.yml
templates/java/: .gitignore  .pre-commit-config.yaml  ci.yml  lefthook.yml  pom-plugins.snippet.xml  release.yml
templates/node/: .gitignore  .pre-commit-config.yaml  ci.yml  eslint-flat.snippet.js  lefthook.yml  prettier.snippet.json  release.yml  tsconfig.json  vitest.config.ts
templates/php/: .gitignore  .php-cs-fixer.php  .pre-commit-config.yaml  ci.yml  (+4 more)
(+33 files in other folders)
